objects/Case_Impacted_Areas__mdt.object
<CustomObject>
    <description>Contains the case impacted ares.</description>
    <fields>
        <fullName>Case_Module__c</fullName>
        <label>Case Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <description>Contains the record type name corresponding to the impacted area.</description>
        <label>RecordTypeName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academy</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
                <value>
                    <fullName>Support_Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Impacted Area</label>
    <pluralLabel>Case Impacted Areas</pluralLabel>
</CustomObject>